fixed positioning of right panel prevents body from expanding to accommodate offscreen 'slide-out'

--- a/tonemotion-shared/css/styles.css
+++ b/tonemotion-shared/css/styles.css
@@ -24,6 +24,7 @@ html {
 body {
   margin: 0;
   height: 100vh;
+  width: 100vw;
   font-family: Tahoma, Arial, sans-serif;
   font-size: 1rem;
   font-weight: 400;
@@ -245,7 +246,7 @@ main {
 
 #helpPanel,
 #infoPanel {
-  position: absolute;
+  position: fixed;
   z-index: 1;
   top: 0;
   height: 100%;
